# frjoco_fullpackage

./: .gitignore  README.md
src/frjoco/: FRJOCO_GUIDE.md
src/frjoco/FrJoCo_Bringup/: CMakeLists.txt  package.xml
src/frjoco/FrJoCo_Bringup/config/: README.md  diff_drive_controller.yaml  diff_drive_controller_sim.yaml  ekf.yaml  ekf_icp_d455.yaml  gripper_only.urdf.xacro  gripper_only_controllers.yaml  mobile_manipulator_full_controllers.yaml  mobile_manipulator_nav_controllers.yaml  nav2_params.yaml  pick_place_config.yaml  sim_nav2_params.yaml  vlp16_3d.lua
src/frjoco/FrJoCo_Bringup/launch/: README.md  arm.launch.py  arm_sim.launch.py  gripper.launch.py  main.launch.py  main_sim.launch.py  mobile.launch.py  mobile_sim.launch.py  sensors.launch.py
src/frjoco/FrJoCo_Bringup/launch/internal/: arm_hardware_impl.launch.py  main_hardware_impl.launch.py  main_sim_impl.launch.py  mobile_hardware_impl.launch.py  mobile_sim_impl.launch.py  nav2_hardware_impl.launch.py  rtab_livox.launch.py  rtab_mapping.launch.py  sensors_hardware_impl.launch.py
src/frjoco/FrJoCo_Bringup/rviz/: basic_display.rviz  cam_lidar.rviz  lidar3d_livox_nav.rviz  lidar3d_slam.rviz  nav2.rviz  nav2_vlp16.rviz  rtab_mapping.rviz  sim_nav2.rviz
src/frjoco/FrJoCo_Bringup/scripts/: Makefile  can_motor_hz_monitor.py  cmd_vel_capper.py  hardware_status_monitor.py  obstacle_decay_node.py  plot_joint_tracking.py  plot_pos_err.py  set_zero  set_zero.cpp  sim_robot.py  topic_pick_place.py
src/frjoco/FrJoCo_Control/qp_controller/: CMakeLists.txt  package.xml  qp_controller_plugins.xml
src/frjoco/FrJoCo_Control/qp_controller/include/qp_controller/: qp_controller.hpp  qp_solver.hpp
src/frjoco/FrJoCo_Control/qp_controller/src/: qp_controller.cpp  qp_solver.cpp
src/frjoco/FrJoCo_Control/rbdl_dls_controller/: CMakeLists.txt  COLCON_IGNORE  package.xml  rbdl_dls_controller_plugins.xml
src/frjoco/FrJoCo_Control/rbdl_dls_controller/config/: controllers.yaml  hand_presets.yaml
src/frjoco/FrJoCo_Control/rbdl_dls_controller/include/hand_position_controller/: hand_position_controller.hpp
src/frjoco/FrJoCo_Control/rbdl_dls_controller/include/rbdl_dls_controller/: rbdl_dls_controller.hpp  rbdl_dls_solver.hpp
src/frjoco/FrJoCo_Control/rbdl_dls_controller/src/: hand_poisition_controller.cpp  rbdl_dls_control_params.cpp  rbdl_dls_controller.cpp  rbdl_dls_solver.cpp
src/frjoco/FrJoCo_Hardware/gripper_sdk/: README.md
src/frjoco/FrJoCo_Hardware/gripper_sdk/ros2_hardware/: CMakeLists.txt  gripper_hardware_plugins.xml  package.xml
src/frjoco/FrJoCo_Hardware/gripper_sdk/ros2_hardware/include/gripper_hardware/: gripper_hardware_interface.hpp
src/frjoco/FrJoCo_Hardware/gripper_sdk/ros2_hardware/src/: gripper_hardware_interface.cpp
src/frjoco/FrJoCo_Hardware/livox_ros_driver2/: CMakeLists.txt
src/frjoco/FrJoCo_Hardware/manipulator_sdk/C++/: CMakeLists.txt
src/frjoco/FrJoCo_Hardware/manipulator_sdk/C++/include/manipulator_sdk/: async_can_reader.hpp  frlab_manipulator.hpp  integrated_driver.hpp  rmd_protocol.hpp  robstride_protocol.hpp  socketcan_device.hpp  sync_driver.hpp
src/frjoco/FrJoCo_Hardware/manipulator_sdk/C++/scripts/: test_comm.cpp  test_frlab_manipulator.cpp  test_integrated.cpp  test_read_only.cpp  test_robstride.cpp  test_socketcan.cpp
src/frjoco/FrJoCo_Hardware/manipulator_sdk/C++/src/: frlab_manipulator.cpp  integrated_driver.cpp  rmd_protocol.cpp  robstride_protocol.cpp  socketcan_device.cpp  sync_driver.cpp
src/frjoco/FrJoCo_Hardware/manipulator_sdk/ros2_hardware/: CMakeLists.txt  frlab_manipulator_hardware_plugins.xml  package.xml
src/frjoco/FrJoCo_Hardware/manipulator_sdk/ros2_hardware/include/frlab_manipulator_hardware/: frlab_manipulator_hardware.hpp
src/frjoco/FrJoCo_Hardware/manipulator_sdk/ros2_hardware/src/: frlab_manipulator_hardware.cpp
src/frjoco/FrJoCo_Model/frjoco_model/: CMakeLists.txt  package.xml
src/frjoco/FrJoCo_Model/frjoco_model/URDF/: frjoco.urdf.xacro
src/frjoco/FrJoCo_Model/frjoco_model/URDF/manipulator_urdf/: ur5e_arm_only.urdf  ur5e_gripper.urdf
src/frjoco/FrJoCo_Model/frjoco_model/URDF/mobile_urdf/: mobile_base.xacro  mobile_hardware.urdf.xacro
src/frjoco/FrJoCo_Model/frjoco_model/meshes/6dof/: forearm.stl  upperarm.stl  wrist2.stl
src/frjoco/FrJoCo_Model/frjoco_model/meshes/gripper/: palm.stl  two_finger_tip.stl
src/frjoco/FrJoCo_Model/manipulator_description/: CMakeLists.txt  package.xml
src/frjoco/FrJoCo_Model/meshes/6dof/: wrist1.stl
src/frjoco/FrJoCo_MoveIt/: CMakeLists.txt  package.xml
src/frjoco/FrJoCo_MoveIt/config/: initial_positions.yaml  joint_limits.yaml  mobile_manipulator_full.srdf  mobile_manipulator_full_moveit_controllers.yaml  moveit.rviz  ompl_planning.yaml  ros2_controllers.yaml  ur5e_arm_only.ros2_control.xacro  ur5e_arm_only.srdf  ur5e_arm_only.urdf.xacro
src/frjoco/FrJoCo_MoveIt/launch/: demo.launch.py  frlab_arm_moveit.launch.py  manual_move.launch.py  mobile_manipulator_full_moveit.launch.py  mobile_manipulator_pick_stack.launch.py  mobile_manipulator_planning_demo.launch.py  vision_move_demo.launch.py
src/frjoco/FrJoCo_MoveIt/scripts/: demo_joint_state_publisher.py  ee_pose_publisher.py  passive_joint_state_publisher.py  pick_place_demo.py  publish_robot_description.py  terminal_target.py  vision_move.py  yolo_grasp_pose_bridge.py
src/frjoco/FrJoCo_MoveIt/urdf/: mobile_manipulator_moveit.urdf
src/frjoco/FrJoCo_Nav2/robot_nav2/: CMakeLists.txt  README.md  package.xml
src/frjoco/FrJoCo_Nav2/robot_slam/: CMakeLists.txt  README.md
src/frjoco/FrJoCo_Nav2/robot_slam/config/: rtabmap_livox.ini
src/frjoco/FrJoCo_Nav2/robot_slam/launch/: cartographer.launch.py
src/frjoco/FrJoCo_Web/: CMakeLists.txt  README.md  package.xml
src/frjoco/FrJoCo_Web/launch/: web_interface.launch.py
src/frjoco/FrJoCo_Web/scripts/: gripper_web_bridge.py
src/frjoco/FrJoCo_Web/www/: index.html
src/frjoco/FrJoCo_YOLO/: package.xml  setup.py
src/frjoco/FrJoCo_YOLO/yolo_realsense/: keyboard_trigger_client.py  realsense_yolo26_seg_viewer.py  thin_part_grasp_trigger_node.py  yolo26_seg_mask_publisher_node.py  yolo_publisher_node.py
(+27 files in other folders)
