<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frlab_manipulator_hardware</name>
  <version>0.1.0</version>
  <description>ROS2 hardware interface for frlab 6DOF arm (Robstride03 + X4-36 via SocketCAN).</description>
  <maintainer email="ycm99979@gmail.com">frlab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/frlab_manipulator_hardware_plugins.xml"/>
  </export>
</package>
